# EdgeAgent-YOLO-MLOps

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  dosya_yapisi.md  dosya_yapisi.txt  goruntuislemebilgi.md  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: baseline_erdogan1_singleclass.md  camera_config.yaml  classes.yaml  datasets.yaml  phase2_config.yaml  production_config.yaml  rules.yaml
configs/models/: yolov10s_ca.yaml
deploy/: Dockerfile  build-offline-bundle.sh  docker-compose.yml  edgeagent-trainer.service  edgeagent-trainer.timer  edgeagent.service  install-service.ps1  mosquitto.conf  requirements-docker.txt  run.bat  run.sh  setup-jetson.sh  uninstall-service.ps1
docs/: AUGMENT_ANALYSIS.md  COLLABORATION_GUIDE.md  DATA_SOURCES.md  GPU_SETUP_WINDOWS.md  PROJECT_DETAILED.md  ROADMAP.md  SPRINT1_EXECUTION_PLAN.md  STATUS_CURRENT.md  STRATEGY.md
docs/agent/: data_guide.md  (+4 more)
reports/: README.md  Sprint1_First_Report.docx  final_phase1_report.md  final_phase1_v2_report.md  generate_first_report.py
roboflowetiketlenen/: README.roboflow.txt
scripts/: README.md  audit_assets.py  backfill_mlflow.py  check_gpu.py  export_onnx.py  export_tensorrt.py  generate_vlm_captions.py  infer_yolo.py  prepare_phase1_dataset.py  prepare_production_dataset.py  prepare_v2_dataset.py  prepare_v3_copypaste.py  prepare_v4_dataset.py  start_mlflow_server.py  train_final_phase1.py  train_yolo.py
tests/: test_config.py  test_conflict_resolver.py  test_constants.py  test_rca_templates.py  test_spatial_logic.py
(+1619 files in other folders)
