[project]
name = "edgeagent"
version = "1.0.0"
description = "Industrial quality control AI — YOLOv10-S + PaliGemma VLM"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
